Improve English and structure of the Changelog
Co-authored-by: gui machiavelli <hey@guimachiavelli.com>

--- a/meilisearch-release-changelog/v1.13.0.md
+++ b/meilisearch-release-changelog/v1.13.0.md
@@ -4,7 +4,7 @@
 > [!WARNING]
 > Since this is a release candidate (RC), we do NOT recommend using it in a production environment. Is something not working as expected? We welcome [bug reports](https://github.com/meilisearch/meilisearch/issues/new/choose) and [feedback about new features](https://github.com/meilisearch/product/discussions).
 
-Meilisearch v1.13 introduces several significant improvements, including stabilizing the Vector Store feature for seamless hybrid search integration! 🎉 This version also simplifies the Meilisearch upgrade process: you don't need a dump for migrating anymore!
+Meilisearch v1.13 stabilizes AI-powered search integration! 🎉 This release also introduces two new experimental features: upgrading to new Meilisearch releases without generating a dump, and making federated requests across multiple Meilisearch instances.
 
 <!-- The following lines should NOT be put in the PRE-release changelogs -->
 🧰 All official Meilisearch integrations (including SDKs, clients, and other tools) are compatible with this Meilisearch release. Integration deployment happens between 4 to 48 hours after a new version becomes available.
@@ -14,178 +14,131 @@ Some SDKs might not include all new features. Consult the project repository for
 
 # New features and updates 🔥
 
-## Stabilize Vector Store feature
+## AI-powered search and vector store stabilization
 
-After its initial release in v1.3.0, we have now fully stabilized the Vector Store feature. The experimental feature no longer requires manual activation, and the `vectorStore` field is no longer displayed or accepted by the `/experimental-features` route. This makes it even simpler to utilize our hybrid search capability, which delivers significantly better search relevance by combining traditional full text search with AI-powered semantic search.
+With v1.13, AI-powered search is available to all users by default and no longer requires manual activation.
 
-### Breaking Changes before Stabilization
+### Breaking Changes
 
-* Accepted Ollama URLs can only end with `/api/embed` and `/api/embeddings`.
+* `vectorStore` is no longer an accepted value for the `/experimental-features` route
+* Ollama URLs must end with either `/api/embed` or `/api/embeddings`
 * Modified error codes:
-  - `invalid_embedder` has been split into `invalid_search_embedder` and `invalid_similar_embedder`. These codes are returned when the `embedder` parameter of a search (resp. similar) request refers to a non-existing embedder configuration or is not a string.
-  - `invalid_hybrid_query` has been renamed to `invalid_search_hybrid_query`. It is returned when the `hybrid` parameter is invalid: contains unknown keys or is not either `null` or an object.
+  - `invalid_embedder` has been split into `invalid_search_embedder` and `invalid_similar_embedder`. These codes are returned when the `embedder` parameter of a request to `/search`, `/multi-search` or `/similar` specifies a non-existing embedder or is not a string
+  - `invalid_hybrid_query` has been renamed to `invalid_search_hybrid_query`. It is returned when the `hybrid` parameter contains unknown keys or is not either `null` or an object
 
 Done by @dureuill in https://github.com/meilisearch/meilisearch/pull/5232 & https://github.com/meilisearch/meilisearch/pull/5234
 
-## Experimental Dumpless Upgrade: Ease upgrading to the next version without a dump
+## Experimental feature: Dumpless upgrades
 
-From now on you can upgrade any database in v1.12 or later to the latest version without using a dump.
-This means it's an in-place, faster upgrade process that consumes only the minimum amount of RAM or disk space required.
+Use `--experimental-dumpless-upgrade` after updating the Meilisearch binary to migrate to a new release:
 
-To upgrade your v1.12 database to v1.13 run:
-```
+```sh
 ./meilisearch --experimental-dumpless-upgrade
 ```
+
+This is a faster and more efficient process that does not require you to generate a dump and pass it to Meilisearch when upgrading to a new release.
+
+> [!WARNING]  
+> Meilisearch strongly recommends you generate a backup snapshot before migrating. This is an experimental feature and failed upgrades may lead to database corruption.
 
 Read more about it [on the dedicated product discussion](https://github.com/orgs/meilisearch/discussions/804).
 
 Done by @irevoire and @dureuill in https://github.com/meilisearch/meilisearch/pull/5264
 
-## Proxy search requests
+## Experimental feature: Proxy search requests
 
-You can now transparently federate search results from multiple Meilisearch instances.
+Use proxy search requests together with the `/multi-search` route to query multiple Meilisearch instances at the same time. This is particularly useful when handling very large databases.
 
-1. Enable the `proxy_search` experimental feature.
-2. Setup your network of multiple instances with a call to `PATCH /network`
-```json
-{
-  "remotes": {
+First, use the `/experimental-features` route to enable `proxy_search`:
+
+```sh
+curl \
+  -X PATCH 'MEILISEARCH_URL/experimental-features/' \
+  -H 'Content-Type: application/json'  \
+  --data-binary '{
+    "proxy_search": true
+  }'
+```
+
+Next, set up your network of Meilisearch instances with a call to `PATCH /network` configuring one `self` and multiple `remotes`:
+
+```sh
+curl \
+  -X PATCH 'MEILISEARCH_URL/network/' \
+  -H 'Content-Type: application/json'  \
+  --data-binary '{
+    "remotes": {
       "ms-0": {
         "url": "http://ms-1235.example.meilisearch.io",
         "searchApiKey": "Ecd1SDDi4pqdJD6qYLxD3y7VZAEb4d9j6LJgt4d6xas"
       },
       "ms-1": {
-	      "url": "http://ms-4242.example.meilisearch.io",
-	      "searchApiKey": "hrVu-OMcjPGElK7692K7bwriBoGyHXTMvB5NmZkMKqQ"
-	    }
-  },
-  "self": "ms-0"
-}
-```
-3. Create the same indexes with the same settings on all your Meilisearch instances.
-4. Send your documents to your instances, making sure to never send the same documents to different Meilisearch instances.
-5. Use the new `federationOptions.remote` search query parameter in your federated search on `POST /multi-search`
-```json
-{
-    "federation": {
-        "limit": 5
+        "url": "http://ms-4242.example.meilisearch.io",
+        "searchApiKey": "hrVu-OMcjPGElK7692K7bwriBoGyHXTMvB5NmZkMKqQ"
+      }
     },
+    "self": "ms-0"
+  }'
+```
+Repeat this process with every instance in your network, then add documents to them. Do not send the same documents to different instances.
+Finally, make a `/multi-search` query with the new `federationOptions.remote`:
+
+```sh
+curl \
+  -X PATCH 'MEILISEARCH_URL/multi-search/' \
+  -H 'Content-Type: application/json'  \
+  --data-binary '{
+    "federation": {},
     "queries": [
         {
             "q": "Batman returns dark",
             "indexUid": "movies",
             "federationOptions": {
                 "remote": "ms-0"
-            },
-            "attributesToRetrieve": [
-                "title"
-            ]
+            }
         },
         {
             "q": "Batman returns dark",
             "indexUid": "movies",
             "federationOptions": {
                 "remote": "ms-1"
-            },
-            "attributesToRetrieve": [
-                "title"
-            ]
+            }
         }
     ]
 }
 ```
-This yields the following results:
-```json
-{
-  "hits": [
-    {
-      "title": "Batman: The Dark Knight Returns, Part 1",
-      "_federation": {
-        "indexUid": "mieli",
-        "queriesPosition": 1,
-        "weightedRankingScore": 0.939452124935996,
-        "remote": "ms-1"
-      }
-    },
-    {
-      "title": "Batman: The Dark Knight Returns, Part 2",
-      "_federation": {
-        "indexUid": "mieli",
-        "queriesPosition": 1,
-        "weightedRankingScore": 0.939452124935996,
-        "remote": "ms-1"
-      }
-    },
-    {
-      "title": "Batman Beyond: Return of the Joker",
-      "_federation": {
-        "indexUid": "mieli",
-        "queriesPosition": 0,
-        "weightedRankingScore": 0.8660714285714286,
-        "remote": "ms-0"
-      }
-    },
-    {
-      "title": "Batman Returns",
-      "_federation": {
-        "indexUid": "mieli",
-        "queriesPosition": 0,
-        "weightedRankingScore": 0.6666666666666666,
-        "remote": "ms-0"
-      }
-    },
-    {
-      "title": "Batman: Return of the Caped Crusaders",
-      "_federation": {
-        "indexUid": "mieli",
-        "queriesPosition": 1,
-        "weightedRankingScore": 0.5798059964726632,
-        "remote": "ms-1"
-      }
-    }
-  ],
-  "processingTimeMs": 160,
-  "limit": 5,
-  "offset": 0,
-  "estimatedTotalHits": 64,
-  "remoteErrors": {}
-}
-```
 
-Using this new feature, you can split a large index across multiple Meilisearch instances.
 Find more information about this feature in the [public usage page](https://meilisearch.notion.site/API-usage-Remote-search-request-f64fae093abf409e9434c9b9c8fab6f3?pvs=74)
 
 
 ## Other improvements
 
-* Improve the auto-batching of tasks by exposing a way to limite the total size of a batch by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5223
-* Related to [Prometheus the experimental feature](https://github.com/orgs/meilisearch/discussions/625): Add Prometheus metrics to measure the task queue latency by @takaebato in https://github.com/meilisearch/meilisearch/pull/5178
+* Improve task auto-batching by exposing a way to limit the total size of a batch by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5223
+* Add Prometheus metrics to measure task queue latency by @takaebato in https://github.com/meilisearch/meilisearch/pull/5178
 * Speed up the request to list the indexes by @irevoire in https://github.com/meilisearch/meilisearch/pull/5166
 * Add support for `GITHUB_TOKEN` authentication in installation script by @Sherlouk in https://github.com/meilisearch/meilisearch/pull/5216
 
 # Fixes 🐞
 
-* Improve the error message when an attributes is not filterable by @jameshiew in https://github.com/meilisearch/meilisearch/pull/5135
+* Improve error message when an attribute is not filterable by @jameshiew in https://github.com/meilisearch/meilisearch/pull/5135
 
 # Misc
 
-* Dependencies updates
-  * Upgrade dependencies and fixes the `idna` severity issue by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5218
+* Dependency updates
+  * Upgrade dependencies to fix the `idna` severity issue by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5218
 * CIs and tests
-  * Split Meilisearch crate tests in separate file by @K-Kumar-01 in https://github.com/meilisearch/meilisearch/pull/5134
-  * Split tests in separate file by @K-Kumar-01 in https://github.com/meilisearch/meilisearch/pull/5171
+  * Split tests into separate files by @K-Kumar-01 in https://github.com/meilisearch/meilisearch/pull/5134, https://github.com/meilisearch/meilisearch/pull/5171, https://github.com/meilisearch/meilisearch/pull/5174
   * Remove obsolete test code by @K-Kumar-01 in https://github.com/meilisearch/meilisearch/pull/5173
-  * Fix the flaky batches test by @irevoire in https://github.com/meilisearch/meilisearch/pull/5175
-  * Split tests for option crate meilisearch in a separate test file by @K-Kumar-01 in https://github.com/meilisearch/meilisearch/pull/5174
+  * Fix flaky batches test by @irevoire in https://github.com/meilisearch/meilisearch/pull/5175
   * Remove hard coded task IDs to prevent flaky tests by @mhmoudr in https://github.com/meilisearch/meilisearch/pull/5182
   * Improve test performance of get_index.rs by @DerTimonius in https://github.com/meilisearch/meilisearch/pull/5210
-* Misc
-  * Guide people to create custom reports on the benchboard by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5029
+* Other
+  * Instruct users to create custom reports on the benchboard by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5029
   * Fix typo in a comment by @eltociear in https://github.com/meilisearch/meilisearch/pull/5184
   * Replace hardcoded string with constants by @Gnosnay in https://github.com/meilisearch/meilisearch/pull/5169
-  * Refactor the index-scheduler by @irevoire in https://github.com/meilisearch/meilisearch/pull/5199
+  * Refactor index-scheduler by @irevoire in https://github.com/meilisearch/meilisearch/pull/5199
   * Refactor indexer by @dureuill in https://github.com/meilisearch/meilisearch/pull/5168
-  * Auto-generate the OpenAPI spec by @irevoire in https://github.com/meilisearch/meilisearch/pull/4867 & https://github.com/meilisearch/meilisearch/pull/5231
+  * Auto-generate OpenAPI spec by @irevoire in https://github.com/meilisearch/meilisearch/pull/4867 & https://github.com/meilisearch/meilisearch/pull/5231
   * Merge bitmaps by using `Extend::extend` by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5221
   * Fix issue introduced by dumpless upgrade by @manojks1999 in https://github.com/meilisearch/meilisearch/pull/5284
 
