Improve a little bit english sentences
Co-authored-by: gui machiavelli <hey@guimachiavelli.com>

--- a/meilisearch-release-changelog/v1.13.0.md
+++ b/meilisearch-release-changelog/v1.13.0.md
@@ -115,7 +115,7 @@ Find more information about this feature in the [public usage page](https://meil
 
 * Improve task auto-batching by exposing a way to limit the total size of a batch by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5223
 * Add Prometheus metrics to measure task queue latency by @takaebato in https://github.com/meilisearch/meilisearch/pull/5178
-* Speed up the request to list the indexes by @irevoire in https://github.com/meilisearch/meilisearch/pull/5166
+* Speed up the request to list indexes by @irevoire in https://github.com/meilisearch/meilisearch/pull/5166
 * Add support for `GITHUB_TOKEN` authentication in installation script by @Sherlouk in https://github.com/meilisearch/meilisearch/pull/5216
 
 # Fixes 🐞
