Rename proxy search requests into remote federated search requests

--- a/meilisearch-release-changelog/v1.13.0.md
+++ b/meilisearch-release-changelog/v1.13.0.md
@@ -38,25 +38,25 @@ Use `--experimental-dumpless-upgrade` after updating the Meilisearch binary to m
 
 This is a faster and more efficient process that does not require you to generate a dump and pass it to Meilisearch when upgrading to a new release.
 
-> [!WARNING]  
+> [!WARNING]
 > Meilisearch strongly recommends you generate a backup snapshot before migrating. This is an experimental feature and failed upgrades may lead to database corruption.
 
 Read more about it [on the dedicated product discussion](https://github.com/orgs/meilisearch/discussions/804).
 
 Done by @irevoire and @dureuill in https://github.com/meilisearch/meilisearch/pull/5264
 
-## Experimental feature: Proxy search requests
+## Experimental feature: Remote federated search requests
 
-Use proxy search requests together with the `/multi-search` route to query multiple Meilisearch instances at the same time. This is particularly useful when handling very large databases.
+Use remote federated search requests together with the `/multi-search` route to query multiple Meilisearch instances at the same time. This is particularly useful when handling very large databases.
 
-First, use the `/experimental-features` route to enable `proxy_search`:
+First, use the `/experimental-features` route to enable `network`:
 
 ```sh
 curl \
   -X PATCH 'MEILISEARCH_URL/experimental-features/' \
   -H 'Content-Type: application/json'  \
   --data-binary '{
-    "proxy_search": true
+    "network": true
   }'
 ```
 
@@ -109,7 +109,6 @@ curl \
 ```
 
 Find more information about this feature in the [public usage page](https://meilisearch.notion.site/API-usage-Remote-search-request-f64fae093abf409e9434c9b9c8fab6f3?pvs=74)
-
 
 ## Other improvements
 
