Update the changelog based on rc.1

--- a/meilisearch-release-changelog/v1.13.0.md
+++ b/meilisearch-release-changelog/v1.13.0.md
@@ -116,6 +116,7 @@ Find more information about this feature in the [public usage page](https://meil
 * Add Prometheus metrics to measure task queue latency by @takaebato in https://github.com/meilisearch/meilisearch/pull/5178
 * Speed up the request to list indexes by @irevoire in https://github.com/meilisearch/meilisearch/pull/5166
 * Add support for `GITHUB_TOKEN` authentication in installation script by @Sherlouk in https://github.com/meilisearch/meilisearch/pull/5216
+* Expose a new `usedDatabaseSize` field in the `/stats` route by @ManyTheFish in https://github.com/meilisearch/meilisearch/pull/5314
 
 # Fixes 🐞
 
@@ -140,6 +141,15 @@ Find more information about this feature in the [public usage page](https://meil
   * Auto-generate OpenAPI spec by @irevoire in https://github.com/meilisearch/meilisearch/pull/4867 & https://github.com/meilisearch/meilisearch/pull/5231
   * Merge bitmaps by using `Extend::extend` by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5221
   * Fix issue introduced by dumpless upgrade by @manojks1999 in https://github.com/meilisearch/meilisearch/pull/5284
+  * Send the OSS analytics once per day instead of once per hour by @irevoire in https://github.com/meilisearch/meilisearch/pull/5312
+  * Log more metrics around HTTP embedder requests and ANNs in arroy by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5288
+  * Fix internal error when not correctly using the `documentTemplateMaxBytes` parameter by @dureuill in https://github.com/meilisearch/meilisearch/pull/5306
+  * When a batch is deleted it no longer keeps some internal data in the DB @Kerollmops and @irevoire in https://github.com/meilisearch/meilisearch/pull/5272
+  * Fix a rare stack overflow when using remote embedders by @Kerollmops with the help of @dureuill https://github.com/meilisearch/meilisearch/pull/5294 (from v1.12.8)
+  * Fix Dotnet tests in sdks-tests.yml by @curquiza in https://github.com/meilisearch/meilisearch/pull/5291
+  * Debug log the channel congestion by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5177
+  * Improve unexpected panic message by @irevoire in https://github.com/meilisearch/meilisearch/pull/5300
+  * Introduce a compaction subcommand in meilitool by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5235
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearch): @takaebato, @Sherlouk, @jameshiew, @K-Kumar-01, @mhmoudr, @eltociear, @Gnosnay, @DerTimonius, @manojks1999
