--- a/meilisearch-release-changelog/v1.13.0.md
+++ b/meilisearch-release-changelog/v1.13.0.md
@@ -121,6 +121,11 @@ Find more information about this feature in the [public usage page](https://meil
 # Fixes 🐞
 
 * Improve error message when an attribute is not filterable by @jameshiew in https://github.com/meilisearch/meilisearch/pull/5135
+* Make sure indexing embeddings is using the right number of threads by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5322
+* Dumpless upgrade will no longer corrupt the database in case of early stop by @irevoire in https://github.com/meilisearch/meilisearch/pull/5316
+* Fix export/import dump that contains batches data by @irevoire in https://github.com/meilisearch/meilisearch/pull/5310
+* Make sure indexing geo points works with PUT requests by @dureuill in https://github.com/meilisearch/meilisearch/pull/5332
+* Add back semantic search timeout from v1.11.3 by @dureuill in https://github.com/meilisearch/meilisearch/pull/5339
 
 # Misc
 
@@ -150,6 +155,7 @@ Find more information about this feature in the [public usage page](https://meil
   * Debug log the channel congestion by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5177
   * Improve unexpected panic message by @irevoire in https://github.com/meilisearch/meilisearch/pull/5300
   * Introduce a compaction subcommand in meilitool by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5235
+  * Expose a route to get the file content associated with a task by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5326
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearch): @takaebato, @Sherlouk, @jameshiew, @K-Kumar-01, @mhmoudr, @eltociear, @Gnosnay, @DerTimonius, @manojks1999, @ellnix, @Guikingone
