--- a/meilisearch-release-changelog/v1.13.0.md
+++ b/meilisearch-release-changelog/v1.13.0.md
@@ -116,7 +116,8 @@ Find more information about this feature in the [public usage page](https://meil
 * Add Prometheus metrics to measure task queue latency by @takaebato in https://github.com/meilisearch/meilisearch/pull/5178
 * Speed up the request to list indexes by @irevoire in https://github.com/meilisearch/meilisearch/pull/5166
 * Add support for `GITHUB_TOKEN` authentication in installation script by @Sherlouk in https://github.com/meilisearch/meilisearch/pull/5216
-* Expose a new `usedDatabaseSize` field in the `/stats` route by @ManyTheFish in https://github.com/meilisearch/meilisearch/pull/5314
+* Expose a new `usedDatabaseSize` field on the `/stats` route by @ManyTheFish in https://github.com/meilisearch/meilisearch/pull/5314
+* Expose embeddings info on the `/stats` route by @ManyTheFish in https://github.com/meilisearch/meilisearch/pull/5341
 
 # Fixes 🐞
 
@@ -156,6 +157,7 @@ Find more information about this feature in the [public usage page](https://meil
   * Improve unexpected panic message by @irevoire in https://github.com/meilisearch/meilisearch/pull/5300
   * Introduce a compaction subcommand in meilitool by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5235
   * Expose a route to get the file content associated with a task by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5326
+  * Fix workload sha for the benchmark by @ManyTheFish in https://github.com/meilisearch/meilisearch/pull/5342
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearch): @takaebato, @Sherlouk, @jameshiew, @K-Kumar-01, @mhmoudr, @eltociear, @Gnosnay, @DerTimonius, @manojks1999, @ellnix, @Guikingone, @migueltarga
