Add arroy progress issue
Co-authored-by: Tamo <irevoire@protonmail.ch>

--- a/meilisearch-release-changelog/v1.14.0.md
+++ b/meilisearch-release-changelog/v1.14.0.md
@@ -82,6 +82,7 @@ Done by @dureuill in [#5371](https://github.com/meilisearch/meilisearch/pull/537
 * exhaustive facet search by @ManyTheFish in [#5369](https://github.com/meilisearch/meilisearch/pull/5369)
 * Reduce RAM consumption of arroy by @irevoire in https://github.com/meilisearch/arroy/pull/105
 * Cache Embeddings in Search with an experimental feature by @dureuill in [#5418](https://github.com/meilisearch/meilisearch/pull/5418)
+* Extend the batch progress view to the indexing of vectors by @irevoire in [5420](https://github.com/meilisearch/meilisearch/pull/5420)
 
 # Fixes 🐞
 
