--- a/meilisearch-release-changelog/v1.14.0.md
+++ b/meilisearch-release-changelog/v1.14.0.md
@@ -16,8 +16,35 @@ Some SDKs might not include all new features. Consult the project repository for
 
 ## Granular Filterable Attribute Settings
 
-<TBD: Detailed usage of the feature>
-<TBD: Find a better title>
+
+This feature allows for the choice of the filter features of each filterable attribute with high granularity.
+Activating or deactivating a feature will have an impact on the indexing time.
+To use the feature, use the new `filterableAttributes` format in the settings route (`PATCH /indexes/INDEX_UID/settings`):
+
+```json
+{
+	"filterableAttributes": [
+	  {
+	    "attributePatterns": ["genre", "artist"], 
+	    "features": { "facetSearch": true, "filter": {"equality": true, "comparison": false } }
+	  },
+	  {
+	    "attributePatterns": ["rank"],
+	    "features": { "facetSearch": false, "filter": {"equality": true, "comparison": true } }
+	  },
+	  {
+	    "attributePatterns": ["albumId"],
+	    "features": { "facetSearch": false, "filter": {"equality": true, "comparison": false } }
+	  },
+	]
+}
+```json
+
+> 🗒️  In this example, we activate/deactivate each feature depending on the usage of each filterable attribute, the `genre` and `artist` are expected to be strings so the facet search and the equality operators (`=`/`!=`) are activated, but, the comparison operators are deactivated (`>=`, `<=`, ...) because it's not useful and will save time during the indexing process.
+> However, the rank is expected to be a number, so the facet search is deactivated in favor of the the comparison operators.
+> Last, the albumId is expected to be unique, so only the equality operators (`=`/`!=`) are activated.
+For more details about this feature, please refer to its [public usage page](https://meilisearch.notion.site/API-usage-Settings-to-opt-out-indexing-features-filterableAttributes-1764b06b651f80aba8bdf359b2df3ca8)
+
 
 Done by @ManyTheFish in [#5254](https://github.com/meilisearch/meilisearch/pull/5254).
 
