Clean up issues codes and references
Co-authored-by: Louis Dureuil <louis@meilisearch.com>

--- a/meilisearch-release-changelog/v1.14.0.md
+++ b/meilisearch-release-changelog/v1.14.0.md
@@ -100,13 +100,13 @@ curl -H 'Content-Type: application/json' MEILISEARCH_URL/experimental-features -
 For more details about this feature, please refer to its [public usage page](https://www.notion.so/meilisearch/Composite-embedder-usage-14a4b06b651f81859dc3df21e8cd02a0?pvs=4#19f4b06b651f809ab3ecc0daae7d5856)
 <TBD: Find a better title>
 
-Done by @dureuill in [#5371](https://github.com/meilisearch/meilisearch/pull/5371).
+Done by @dureuill in [#5371](https://github.com/meilisearch/meilisearch/pull/5371) and [#5401](https://github.com/meilisearch/meilisearch/pull/5401).
 
 ## Other improvements
 
 * Get multiple documents by ids by @dureuill in [#5384](https://github.com/meilisearch/meilisearch/pull/5384)
 * Support merging update and replacement operations by @Kerollmops in [#5293](https://github.com/meilisearch/meilisearch/pull/5293)
-* Display the internal indexing steps with timings on the `/batches` route by @Kerollmops in [#5356](https://github.com/meilisearch/meilisearch/pull/5356)
+* Display the internal indexing steps with timings on the `/batches` route by @Kerollmops in [#5356](https://github.com/meilisearch/meilisearch/pull/5356) and [#5364](https://github.com/meilisearch/meilisearch/pull/5364)
 * exhaustive facet search by @ManyTheFish in [#5369](https://github.com/meilisearch/meilisearch/pull/5369)
 * Reduce RAM consumption of arroy by @irevoire in https://github.com/meilisearch/arroy/pull/105
 * Cache Embeddings in Search with an experimental feature by @dureuill in [#5418](https://github.com/meilisearch/meilisearch/pull/5418)
@@ -128,8 +128,6 @@ Done by @dureuill in [#5371](https://github.com/meilisearch/meilisearch/pull/537
   * Ensure the settings routes are now configurated when a new field is added to the Settings struct  by @MichaScant in [#5149](https://github.com/meilisearch/meilisearch/pull/5149)
   * Skip a snapshot test on Windows by @Kerollmops in [#5383](https://github.com/meilisearch/meilisearch/pull/5383)
 * Misc
-  * Rename `callTrace` into `progressTrace` by @Kerollmops in [#5364](https://github.com/meilisearch/meilisearch/pull/5364)
-  * Make composite embedders an experimental feature by @dureuill in [#5401](https://github.com/meilisearch/meilisearch/pull/5401)
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearch): @MichaScant
