Improve the granular filters description

--- a/meilisearch-release-changelog/v1.14.0.md
+++ b/meilisearch-release-changelog/v1.14.0.md
@@ -16,26 +16,24 @@ Some SDKs might not include all new features. Consult the project repository for
 
 ## Granular Filterable Attribute Settings
 
-
-This feature allows for the choice of the filter features of each filterable attribute with high granularity.
-Activating or deactivating a feature will have an impact on the indexing time.
+This powerful feature empowers you to customize filterable attribute capabilities with great precision, optimizing indexing speeds by letting you activate only the filter features you need.
 To use the feature, use the new `filterableAttributes` format in the settings route (`PATCH /indexes/INDEX_UID/settings`):
 
 ```json
 {
 	"filterableAttributes": [
 	  {
-	    "attributePatterns": ["genre", "artist"], 
-	    "features": { "facetSearch": true, "filter": {"equality": true, "comparison": false } }
+	    "attributePatterns": ["genre", "artist"],
+	    "features": { "facetSearch": true, "filter": { "equality": true, "comparison": false } }
 	  },
 	  {
 	    "attributePatterns": ["rank"],
-	    "features": { "facetSearch": false, "filter": {"equality": true, "comparison": true } }
+	    "features": { "facetSearch": false, "filter": { "equality": true, "comparison": true } }
 	  },
 	  {
 	    "attributePatterns": ["albumId"],
-	    "features": { "facetSearch": false, "filter": {"equality": true, "comparison": false } }
-	  },
+	    "features": { "facetSearch": false, "filter": { "equality": true, "comparison": false } }
+	  }
 	]
 }
 ```
