--- a/meilisearch-release-changelog/v1.14.0.md
+++ b/meilisearch-release-changelog/v1.14.0.md
@@ -44,16 +44,13 @@ To use the feature, use the new `filterableAttributes` format in the settings ro
 
 For more details about this feature, please refer to its [public usage page](https://meilisearch.notion.site/API-usage-Settings-to-opt-out-indexing-features-filterableAttributes-1764b06b651f80aba8bdf359b2df3ca8)
 
-
 Done by @ManyTheFish in [#5254](https://github.com/meilisearch/meilisearch/pull/5254).
 
 ## Composite Embedders
 
-
 This feature allows using different embedders at search and indexing time, which is useful to optimize the embedder to each situation:
-
-- Using a remote embedder for indexing in bulk, as remote embedders provide the highest bandwidth (embeddings/s)
-- Using a local embedder for answering search queries, as local embedders provide the lowest latency (time to first embedding)
+- Using a remote embedder for indexing in bulk, as remote embedders provide the highest bandwidth (embeddings/s).
+- Using a local embedder for answering search queries, as local embedders provide the lowest latency (time to first embedding).
 
 To use the feature, follow these steps:
 
@@ -95,8 +92,7 @@ curl -H 'Content-Type: application/json' MEILISEARCH_URL/experimental-features -
 3. Send documents to the index. They will be indexed remotely using the Hugging Face inference endpoint.
 4. Perform semantic search queries, they will be embedded using the local model fetched from the Hugging Face Hub.
 
-For more details about this feature, please refer to its [public usage page](https://www.notion.so/meilisearch/Composite-embedder-usage-14a4b06b651f81859dc3df21e8cd02a0?pvs=4#19f4b06b651f809ab3ecc0daae7d5856)
-<TBD: Find a better title>
+For more details about this feature, please refer to its [public usage page](https://www.notion.so/meilisearch/Composite-embedder-usage-14a4b06b651f81859dc3df21e8cd02a0?pvs=4#19f4b06b651f809ab3ecc0daae7d5856).
 
 Done by @dureuill in [#5371](https://github.com/meilisearch/meilisearch/pull/5371) and [#5401](https://github.com/meilisearch/meilisearch/pull/5401).
 
@@ -125,7 +121,6 @@ Done by @dureuill in [#5371](https://github.com/meilisearch/meilisearch/pull/537
   * Ollama Integration Tests by @Kerollmops in [#5308](https://github.com/meilisearch/meilisearch/pull/5308)
   * Ensure the settings routes are now configurated when a new field is added to the Settings struct  by @MichaScant in [#5149](https://github.com/meilisearch/meilisearch/pull/5149)
   * Skip a snapshot test on Windows by @Kerollmops in [#5383](https://github.com/meilisearch/meilisearch/pull/5383)
-* Misc
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearch): @MichaScant
